# TemplatedPL

./: .gitignore  CMakeLists.txt  README.md  evaluator-test.cpp  evaluator.hpp  examples.cpp  expression.hpp  lib.hpp  utils.hpp
